@@ -472,9 +472,7 @@
 #endif
 
 /* Define to 1 if you have a working `mmap' system call. */
-#ifndef MAGICKCORE_HAVE_MMAP_FILEIO 
-#define MAGICKCORE_HAVE_MMAP_FILEIO  1 
-#endif
+/* #undef HAVE_MMAP_FILEIO */
 
 /* Define to 1 if you have the `munmap' function. */
 #ifndef MAGICKCORE_HAVE_MUNMAP 
@@ -966,9 +964,7 @@
 #endif
 
 /* Define to 1 if the system has the type `_Bool'. */
-#ifndef MAGICKCORE_HAVE__BOOL 
-#define MAGICKCORE_HAVE__BOOL  1 
-#endif
+/* #undef HAVE__BOOL */
 
 /* Define to 1 if you have the `_exit' function. */
 #ifndef MAGICKCORE_HAVE__EXIT 
@@ -1034,9 +1030,7 @@
 /* #undef LQR_DELEGATE */
 
 /* Define if using libltdl to support dynamically loadable modules */
-#ifndef MAGICKCORE_LTDL_DELEGATE 
-#define MAGICKCORE_LTDL_DELEGATE  1 
-#endif
+/* #undef LTDL_DELEGATE */
 
 /* Define if the OS needs help to load dependent libraries for dlopen(). */
 /* #undef LTDL_DLOPEN_DEPLIBS */
@@ -1319,9 +1313,7 @@
 #endif
 
 /* Number of bits in a file offset, on hosts where this is settable. */
-#ifndef MAGICKCORE__FILE_OFFSET_BITS 
-#define MAGICKCORE__FILE_OFFSET_BITS  64 
-#endif
+/* #undef _FILE_OFFSET_BITS */
 
 /* enable run-time bounds-checking */
 /* #undef _FORTIFY_SOURCE */
